--- a/My_Bank/My_Bank.UWP/My_Bank.UWP.csproj
+++ b/My_Bank/My_Bank.UWP/My_Bank.UWP.csproj
@@ -149,6 +149,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
     </PackageReference>
+    <PackageReference Include="RestSharp">
+      <Version>106.5.4</Version>
+    </PackageReference>
     <PackageReference Include="System.Net.Http">
       <Version>4.3.3</Version>
     </PackageReference>
